fix bugs vertical alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -80,7 +80,13 @@ input, select, textarea {
 		display: flex;
 		flex-wrap: wrap;
 		box-sizing: border-box;
-		align-items: stretch;
+		align-items: center;
+		font-size: 20px;
+		line-height: 1.25em;
+		text-align: justify;
+  		text-justify: inter-word;
+		color: #555;
+
 	}
 
 		.row > * {
@@ -1497,7 +1503,7 @@ input, select, textarea {
 		-moz-transition: background-color .25s ease-in-out;
 		-webkit-transition: background-color .25s ease-in-out;
 		-ms-transition: background-color .25s ease-in-out;
-		transition: background-color .25s ease-in-out;
+		transition: all .25s ease-in-out;
 	}
 
 		form input[type="text"]:focus,
@@ -1564,7 +1570,7 @@ input, select, textarea {
 
 	.image {
 		display: inline-block;
-		border-radius: 60px;
+		border-radius: 6vmin;
 		filter: grayscale(0%) opacity(75%);
 		box-shadow: -5px -5px 10px rgba(255,255,255, 0.8), 5px 5px 10px rgba(0,0,0,0.25);
 		transition: .25s ease-in-out;
@@ -1855,7 +1861,7 @@ input, select, textarea {
 				position: absolute;
 				background: #e8ecf2;
 				color: #555;
-				border-radius: 10px;
+				border-radius: 2vmin;
 				top: -2.75em;
 				font-size: 0.3em;
 				height: 2.25em;
@@ -1986,7 +1992,7 @@ input, select, textarea {
 		background: rgba(232, 236, 242, 0.5);
 		-webkit-backdrop-filter: blur(10px);
 		backdrop-filter: blur(10px);
-		border-radius: 99px;
+		border-radius: 12vmin;
 		box-shadow: -5px -5px 10px rgba(255,255,255, 0.8), 5px 5px 10px rgba(0,0,0,0.25);
 		-moz-transition: min-height 0.5s ease-in-out, max-height 0.5s ease-in-out;
 		-webkit-transition: min-height 0.5s ease-in-out, max-height 0.5s ease-in-out;
@@ -2137,7 +2143,7 @@ input, select, textarea {
 						background-color: #aaa;
 						font: bold 48px 'Futura';
 						color: transparent;
-						text-shadow: 0px 2px 3px #e8ecf2;
+						text-shadow: 0px 0.2vmin 0.33vmin #e8ecf2;
 						-webkit-background-clip: text;
 						-moz-background-clip: text;
 						background-clip: text;
@@ -2191,15 +2197,14 @@ input, select, textarea {
 /* Footer */
 
 	#footer {
-		color: rgba(255, 255, 255, 0.45);
+		color: #555;
 		text-align: center;
 		padding: 5em 0 0 0;
 		font-size: 0.75em;
 	}
 
 		#footer a {
-			color: #ddd;
-			color: rgba(255, 255, 255, 0.65);
+			color: #555;
 			-moz-transition: color .25s ease-in-out;
 			-webkit-transition: color .25s ease-in-out;
 			-ms-transition: color .25s ease-in-out;
@@ -2261,7 +2266,10 @@ input, select, textarea {
 			font-size: 24px;
 			box-shadow: -5px -5px 10px rgba(255,255,255, 0.8), 5px 5px 10px rgba(0,0,0,0.25);
 			width: 100%;
-			border-radius: 60px;
+			border-radius: 9vmin;
+			-moz-transition: all 0.25s ease-in-out;
+			-webkit-transition:  all 0.25s ease-in-out;
+			-ms-transition:  all 0.25s ease-in-out;
 			transition: all .25s ease-in-out;
 		}
 
@@ -2284,7 +2292,7 @@ input, select, textarea {
 		  .slider {
 			-webkit-appearance: none;  /* Override default CSS styles */
 			appearance: none;
-			border-radius: 60px;
+			border-radius: 9vmin;
 			width: 100%; /* Full-width */
 			height: 25px; /* Specified height */
 			margin-top: 20px;
@@ -2306,7 +2314,7 @@ input, select, textarea {
 		  .slider::-webkit-slider-thumb {
 			-webkit-appearance: none; /* Override default look */
 			appearance: none;
-			border-radius: 60px;
+			border-radius: 9vmin;
 			width: 25px; /* Set a specific slider handle width */
 			height: 25px; /* Slider handle height */
 			background: #555; /* Green background */
@@ -2319,15 +2327,17 @@ input, select, textarea {
 			background: #04AA6D; /* Green background */
 			cursor: pointer; /* Cursor on hover */
 		  }
-		
 
-		  .infobox {
+		  #infobox {
 			width: 100%; /* Width of the outside container */
 			font-size: 20px;
 			line-height: 1.25em;
 			text-align: justify;
   			text-justify: inter-word;
 			color: #555;
+			display: -moz-flex;
+			display: -webkit-flex;
+			display: -ms-flex;
 			display: flex;
 			justify-content: space-around;
 			align-items: center;
@@ -2339,5 +2349,4 @@ input, select, textarea {
 			width: 50%;
 			margin: 1em;
 		  }
-
 		  
